# cmake-examples

./: LICENSE.md  README.md
core/01_helloworld/: CMakeLists.txt  main.cpp
extras/debugger_cwd/: .gitignore  CMakeLists.txt  demo.txt  main.cpp
extras/use_presets/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
extras/use_vcpkg/: CMakeLists.txt  CMakePresets.json  main.cpp
